# TMFR_DataLogging

./: .gitignore  README.md  main.cpp  package-lock.json  package.json  pyproject.toml  sensor_data.csv
backend/: __init__.py  main.py  models.py
firmware/src/: main.cpp
frontend/: components.json  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  tokens.css
frontend/components/: telemetry-chart.tsx  telemetry-toolbar.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx
frontend/lib/: api.ts  types.ts
